<resources>
    <string name="app_name">RashanBazzar</string>
    <string name="_91">+91</string>
    <string name="phone_number">Phone Number</string>
    <string name="q4">Our policy is to not issue refunds - you can uninstall at any time. Rashan Bazzar App will only issue a refund if there is a significant fault with the product at the time delivery (during the delivery). If you are unsure of which shop you would like to select for your product, we encourage you to try the google rated stores once you’re loving your app. It is the responsibility of the owner to comply with the approval processes of the stores they selected. Failure to do so is not grounds for a refund. If you are unsure, please contact us first. We do not charge any fees while you place the order up, taking a risk for you, however, please be aware that when issues arise – particularly with the approval processes of the stores – we undertake a lot more work on your behalf and do not charge extra for this. It is not grounds for a refund.</string>
    <string name="q41">What is your refund policy?</string>
    <string name="a3">We currently support Cash On Delivery (COD) which supports UPI . More method will added soon.</string>
    <string name="q3">What payment methods are accepted?</string>
    <string name="a2">Unfortunately, no order can be guaranteed for instant approval. We are trying to partner vendors and shops for the same. Our support team can assist where possible, however, approval is at the complete discretion of the stores and delivery partner. Sometimes an order won’t be approved for technical or administrative reasons – we will assist in addressing any concerns and ensuring order approval. Please contact us for more information.</string>
    <string name="q2">Will my order be guaranteed approval?</string>
    <string name="a1">Every single update made to your order or to how your order is delivered in the app must again go through the approval process. This can take up to 10 minutes at times (but is generally much quicker!).</string>
    <string name="q1">How long will it take for my order changes to be updated?</string>
    <string name="order_summary">Order Summary</string>
    <string name="your_order">Your Order</string>
    <string name="delivery_fee">Delivery fee</string>
    <string name="order_details">Order Details</string>
    <string name="ordered_on">Ordered on</string>
    <string name="destination">Destination</string>
    <string name="contact_us">Contact Us</string>
    <string name="continueT">Continue</string>
    <string name="please_enter_your_mobile_number_to_receive_a_verification_code">Please enter your mobile number to receive a verification code</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="mobile_verification">mobile_verification</string>
    <string name="place_order">Place Order</string>
    <string name="address_with_contact">Address with contact</string>
    <string name="note">Note...</string>
    <string name="quantity">Quantity</string>
    <string name="enter_the_products">Enter the products</string>
    <string name="category">Category</string>
    <string name="complete_your_profile">Complete your profile</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="city">City</string>
    <string name="submit">submit</string>
    <string name="logo">logo</string>
    <string name="verification">VERIFICATION</string>
    <string name="otp_has_been_sent_to_you_on_your_mobile_phone_please_enter_it_below">OTP has been sent to you on your mobile phone. Please enter it below</string>
    <string name="code">Code</string>
    <string name="verify">VERIFY</string>
    <string name="otp">otp</string>
    <string name="stationary">Stationary</string>
    <string name="medicines">Medicines</string>
    <string name="groceries">Groceries</string>
    <string name="profile">profile</string>
    <string name="log_out">Log out</string>
    <string name="edit_profile">Edit profile</string>
    <string name="support">Support</string>
    <string name="delivery_status">Delivery Status</string>
    <string name="about">Rashan Bazzar aims to solve the deep local discovery and fulfillment problem. It allows Indian students to create \'To do lists\' and then collaborate with partners (vendors) to strike off the tasks from the list.</string>
</resources>
