<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">


        <RelativeLayout
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/colorPrimary"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:src="@drawable/profile"
                android:contentDescription="@string/profile" />

        </RelativeLayout>


        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/back"
            android:layout_marginTop="80dp"
            android:textColor="@android:color/black"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:textSize="12sp"
                android:layout_margin="5dp"/>


            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_location"
                android:layout_margin="5dp"
                android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="80dp"
            android:layout_below="@id/ll2"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/logout"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/btn_white"
                android:text="@string/log_out"
                android:textColor="@color/grey_40" />

            <Button
                android:id="@+id/edit_profile"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/btn_white"
                android:text="@string/edit_profile"
                android:textColor="@color/grey_40" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_below="@id/buttons">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/support"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/support"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_next"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_below="@id/support">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/aboutus"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="About Us"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="60dp"
                    android:textSize="18sp"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_next" />

            </RelativeLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>